abstract class AbstractModel
{
    AbstractView view;


    AbstractModel()
    {

    }


    void setView(AbstractView view)
    {
        this.view = view;
    }
}
