@startuml


title __PROJETCHATSYSTEM's Class Diagram__\n

  namespace ChatApp {
    abstract class AbstractController {
    }

  

    abstract class AbstractModel {
    }

  


    abstract class AbstractView {
    }

  


    class CentralizedNotifier {
    }

  


    class DecentralizedNotifier {
    }

  


    class History {
    }

  


    class Launch {
    }

  


    class LogInController {
    }

  


    class LogInView {
    }

  


    class MainController {
    }

  


    class MainView {
    }

  


    class Message {
    }

  


    class Notification {
    }

  


    class Session {
    }

  


    class SessionController {
    }

  

    class SessionManager {
    }

  


    class SessionView {
    }

  


    class User {
    }

  


    class UserListCellRenderer {
    }

  


    class UserListModel {
    }

  


    class UserManager {
    }
  }
  

  AbstractModel o-- AbstractView : view
  AbstractView o-- AbstractController : controller
  CentralizedNotifier -up-|> AbstractModel
  DecentralizedNotifier -up-|> AbstractModel
  History o-- Message : messageList
  Message o-- User : sender
  LogInController -up-|> AbstractController
  LogInController o-- UserManager : userManager
  LogInView -up-|> AbstractView
  MainController -up-|> AbstractController
  MainController o-- SessionManager : sessionManager
  MainController --- UserManager : userManager
  MainView -up-|> AbstractView
  Session -up-|> AbstractModel
  Session o-- History : history
  SessionController -up-|> AbstractController
  SessionController o-- Session : session
  SessionManager -up-|> AbstractModel
  SessionManager --- UserManager : userManager
  SessionManager o-- Session : sessionList
  SessionView -up-|> AbstractView
  UserListModel o-- User : Users
  UserManager -up-|> AbstractModel
  UserManager o-- CentralizedNotifier : centralizedNotifier
  UserManager o-- User : currentUser
  UserManager o-- DecentralizedNotifier : decentralizedNotifier
  UserManager o-- UserListModel : userListModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
